<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:onClick="SnapPicture"
        android:text="Snap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="439dp"
        android:layout_marginTop="127dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/darker_gray" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="34dp"
        android:onClick="SearchActivity"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSnap" />

    <EditText
        android:id="@+id/editTextCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Caption here"
        android:autofillHints="Test"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonSnap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="329dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="167dp"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:onClick="SaveCaption"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextCaption" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="23dp"
        android:text="Left"
        android:onClick="moveLeft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSnap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCaption" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:layout_marginEnd="42dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="42dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:text="Right"
        android:onClick="moveRight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSnap"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

</android.support.constraint.ConstraintLayout>