<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/editTextSDate"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="DD-MM-YYYY HH:MM:SS"
        android:autofillHints="Test"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEDate"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="DD-MM-YYYY HH:MM:SS"
        android:autofillHints="Test"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSDate" />

    <EditText
        android:id="@+id/editTextTag"
        android:layout_width="355dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Tag Here!"
        android:autofillHints="Test"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEDate" />

    <Button
        android:id="@+id/buttonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="259dp"
        android:layout_marginEnd="154dp"
        android:layout_marginLeft="142dp"
        android:layout_marginRight="154dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="17dp"
        android:text="Button"
        android:onClick="FilterSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTag" />
</android.support.constraint.ConstraintLayout>